err/ovsdbapp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/extras'...
Listing './lib/python3.5/site-packages/extras/tests'...
Listing './lib/python3.5/site-packages/extras-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/fixtures'...
Listing './lib/python3.5/site-packages/fixtures/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures/tests'...
Listing './lib/python3.5/site-packages/fixtures/tests/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/netaddr'...
Listing './lib/python3.5/site-packages/netaddr/contrib'...
Listing './lib/python3.5/site-packages/netaddr/eui'...
Listing './lib/python3.5/site-packages/netaddr/ip'...
Listing './lib/python3.5/site-packages/netaddr/strategy'...
Listing './lib/python3.5/site-packages/netaddr-0.7.19.dist-info'...
Listing './lib/python3.5/site-packages/ovs'...
Listing './lib/python3.5/site-packages/ovs/db'...
Listing './lib/python3.5/site-packages/ovs/unixctl'...
Listing './lib/python3.5/site-packages/ovs-2.8.1.egg-info'...
Listing './lib/python3.5/site-packages/ovsdbapp'...
Listing './lib/python3.5/site-packages/ovsdbapp/backend'...
Listing './lib/python3.5/site-packages/ovsdbapp/backend/ovs_idl'...
Listing './lib/python3.5/site-packages/ovsdbapp/backend/ovs_idl/common'...
Listing './lib/python3.5/site-packages/ovsdbapp/backend/ovs_idl/linux'...
Listing './lib/python3.5/site-packages/ovsdbapp/backend/ovs_idl/windows'...
Listing './lib/python3.5/site-packages/ovsdbapp/schema'...
Listing './lib/python3.5/site-packages/ovsdbapp/schema/open_vswitch'...
Listing './lib/python3.5/site-packages/ovsdbapp/schema/ovn_northbound'...
Listing './lib/python3.5/site-packages/ovsdbapp/schema/ovn_southbound'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/functional'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/functional/schema'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/functional/schema/open_vswitch'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/functional/schema/ovn_northbound'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/functional/schema/ovn_southbound'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/unit'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/unit/backend'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/unit/backend/ovs_idl'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/unit/schema'...
Listing './lib/python3.5/site-packages/ovsdbapp/tests/unit/schema/open_vswitch'...
Listing './lib/python3.5/site-packages/ovsdbapp-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/testtools'...
Compiling './lib/python3.5/site-packages/testtools/_compat2x.py'...
***   File "./lib/python3.5/site-packages/testtools/_compat2x.py", line 16
    raise exc_class, exc_obj, exc_tb
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testtools/matchers'...
Listing './lib/python3.5/site-packages/testtools/testresult'...
Listing './lib/python3.5/site-packages/testtools/tests'...
Listing './lib/python3.5/site-packages/testtools/tests/matchers'...
Listing './lib/python3.5/site-packages/testtools/tests/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
